tried to fixed responve overflow

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -87,7 +87,7 @@ nav#navbar{
                 border-radius: 20px;                   
             }
             a:hover{                                   
-                background-color: rgba(255,0,0,.2);                
+                color:rgba(255, 255, 255, 0.76);                
             }
         }      
     }
@@ -107,7 +107,8 @@ nav#navbar{
         align-items: center;
         margin-right: 20px;
         height: 40px;
-        position: relative;
+        position: absolute;
+        right: 0;
         top: 50%;
         transform: translateY(-50%);
         div.buttons{
@@ -419,6 +420,7 @@ div.container{
                     }
                     a.read-more:hover{
                         background-color: #00abeee0;
+                        box-shadow: 0px 3px 5px rgba(0,0,0,.2);
                     }
                }               
             }
@@ -433,10 +435,12 @@ div.container{
         top: 50%;
         padding: 1em;        
         transform: translateY(-50%);
-        background-color:#fff;
+        background-color:rgba(250, 19, 19, 0.1);
         left: 0;
         box-sizing: border-box; 
         box-shadow: 0px 0px 5px rgba(0,0,0,.2);       
+        border-top-left-radius: 4px;
+        border-bottom-left-radius: 4px;
         span{
             display: block;                      
             a{
@@ -1054,6 +1058,9 @@ div.footer{
                     font-weight: 500;
                     text-decoration: none;
                     color: rgba(0,0,0,.7);
+                }
+                a:hover{
+                    text-decoration: underline;
                 }
             }            
         }
